<resources>

    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>

    <string name="ucrop_menu_crop">Crop</string>

    <string name="ucrop_error_input_data_is_absent" translatable="false">Both input and output Uri must be specified</string>
    <string name="ucrop_mutate_exception_hint" translatable="false">Therefore, override color resource (ucrop_color_toolbar_widget) in your app to make it work on pre-L devices</string>
    <string name="ucrop_rotate">Rotate</string>
    <string name="ucrop_scale">Scale</string>
    <string name="ucrop_crop">Crop</string>
    <string name="ucrop__1_1">1:1</string>
    <string name="ucrop_try_it">Try It</string>
    <string name="ucrop__16_9">16:9</string>
    <string name="ucrop__9_16">9:16</string>
    <string name="ucrop__3_4">3:4</string>
    <string name="ucrop__4_3">4:3</string>
    <string name="ucrop__4_5">4:5</string>
    <string name="ucrop__5_4">5:4</string>
    <string name="ucrop_rotationbutton">rotationButton</string>
    <string name="ucrop_pinch_to_zoom">Pinch to zoom</string>
    <string name="ucrop_ad_free_creation">Ad-Free Creation</string>

</resources>
