<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <ImageButton
        android:id="@+id/rotationButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:contentDescription="@string/ucrop_rotationbutton"
        android:src="@drawable/rotation_icon"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:id="@+id/ratioContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rotationButton"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="7">

        <LinearLayout
            android:id="@+id/ratio3_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:layout_width="22.5dp"
                android:layout_height="30dp"
                android:background="@drawable/rectangle_border_selector" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/ucrop__3_4"
                android:textColor="@color/text_color_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ratio4_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:background="@drawable/rectangle_border_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/ucrop__4_3"
                android:textColor="@color/text_color_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ratio1_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/rectangle_border_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/ucrop__1_1"
                android:textColor="@color/text_color_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ratio4_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:layout_width="24dp"
                android:layout_height="30dp"
                android:background="@drawable/rectangle_border_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/ucrop__4_5"
                android:textColor="@color/text_color_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ratio5_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:layout_width="37.5dp"
                android:layout_height="30dp"
                android:background="@drawable/rectangle_border_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/ucrop__5_4"
                android:textColor="@color/text_color_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ratio9_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:layout_width="16.9dp"
                android:layout_height="30dp"
                android:background="@drawable/rectangle_border_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/ucrop__9_16"
                android:textColor="@color/text_color_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ratio16_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/rectangle_border_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/ucrop__16_9"
                android:textColor="@color/text_color_selector" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/tryItButton"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:layout_below="@id/ratioContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ucrop_try_it"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold">

    <TextView
        android:id="@+id/tryItTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/ucrop_try_it"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/adIcon"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ad_icon"
        android:layout_toEndOf="@id/tryItTv"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/adFreeCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tryItButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/ucrop_ad_free_creation"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
</RelativeLayout>